--- a/package.json
+++ b/package.json
@@ -8,22 +8,23 @@
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
+    "netlify-postbuild": "NPM_CONFIG_PRODUCTION=true npm install --prefix client && npm run build --prefix client"
   },
   "author": "Prashanth Benny",
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
-    "express": "^4.17.1",
-    "express-validator": "^6.4.1",
-    "gravatar": "^1.8.0",
+    "express": "^4.18.2",
+    "express-validator": "^6.15.0",
+    "gravatar": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.13",
+    "mongoose": "^5.13.17",
     "request": "^2.88.2"
   },
   "devDependencies": {
-    "concurrently": "^5.2.0",
-    "nodemon": "^2.0.3"
+    "concurrently": "^5.3.0",
+    "nodemon": "^2.0.22"
   }
 }
